--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
                   <div class="col-md-6">
                     <span>Super Value Deals - Save more with coupons</span>
                   </div>
+                  <div class="col-md-6 text-end">
+                      <div>
+                        <img src="./image/flag1.svg" alt="">
+                      <span>mim</span>
+                      <i class="bi bi-chevron-down"></i>
+                      </div>
+                  </div>
               </div>
           </div>
        </div> 
