--- a/index.html
+++ b/index.html
@@ -17,27 +17,43 @@
     />
   </head>
   <body>
-    <!-- first-navbar-start -->
-    <div class="border-bottom">
-       <div class="py-1 bg-warning">
-          <div class="container">
-              <div class="row">
-                  <div class="col-md-6">
+    <!-- top-headline-start -->
+     <div class="bg-warning py-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
                     <span>Super Value Deals - Save more with coupons</span>
-                  </div>
-                  <div class="col-md-6 text-end">
-                      <div>
-                        <img src="./image/flag1.svg" alt="">
-                      <span>mim</span>
-                      <i class="bi bi-chevron-down"></i>
-                      </div>
-                  </div>
-              </div>
-          </div>
-       </div> 
-    </div>
-    <!-- first-navbar-end -->
-
+                </div>
+                <div class="col-md-6 d-flex justify-content-end gap-2">
+                    <img src="/image/flag1.svg" alt="image">
+                    <span>English</span>
+                    <i class="bi bi-chevron-down icons"></i>
+                </div>
+            </div>
+        </div>
+     </div>
+    <!-- top-headline end-->
+     <div class="container my-4">
+        <div class="row">
+            <div class="col-md-2">
+                <img src="/image/webside-logo.svg" alt="">
+            </div>
+            <div class="col-md-5">
+                <input class="py-2 border"type="text" placeholder="Search for Producs">
+            </div>
+            <div class="col-md-2">
+                <button class="btn border py-2">
+                    <i class="bi bi-geo-alt"></i>
+                    Location
+                </button>
+            </div>
+            <div class="col-md-3 d-flex justify-content-end gap-3 py-2">
+                    <i class="bi bi-heart"></i>
+                    <i class="bi bi-person-circle"></i>
+                    <i class="bi bi-bag"></i>
+            </div>
+        </div>
+     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
       integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
