--- a/index.html
+++ b/index.html
@@ -3,61 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>css border</title>
+    <title>bootstrap</title>
     <link rel="stylesheet" href="./style.css" />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
   </head>
   <body>
-    <!-- top-headline-start -->
-     <div class="bg-warning py-1">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <span>Super Value Deals - Save more with coupons</span>
-                </div>
-                <div class="col-md-6 d-flex justify-content-end gap-2">
-                    <img src="/image/flag1.svg" alt="image">
-                    <span>English</span>
-                    <i class="bi bi-chevron-down icons"></i>
-                </div>
+    <div class="container">
+      <div class="row py-4">
+        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-3">
+          <div class="card" style="width: 20rem">
+            <img src="/image/HOME PAGE1.jpg" class="card-img-top" alt="IMAGE-CARD" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
+          </div>
         </div>
-     </div>
-    <!-- top-headline end-->
-     <div class="container my-4">
-        <div class="row">
-            <div class="col-md-2">
-                <img src="/image/webside-logo.svg" alt="">
+        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-3">
+          <div class="card" style="width: 20rem">
+            <img src="/image/HOME PAGE1.jpg" class="card-img-top" alt="IMAGE-CARD" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
-            <div class="col-md-5">
-                <input class="py-2 border"type="text" placeholder="Search for Producs">
-            </div>
-            <div class="col-md-2">
-                <button class="btn border py-2">
-                    <i class="bi bi-geo-alt"></i>
-                    Location
-                </button>
-            </div>
-            <div class="col-md-3 d-flex justify-content-end gap-3 py-2">
-                    <i class="bi bi-heart"></i>
-                    <i class="bi bi-person-circle"></i>
-                    <i class="bi bi-bag"></i>
-            </div>
+          </div>
         </div>
-     </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-3">
+          <div class="card" style="width: 20rem">
+            <img src="/image/HOME PAGE1.jpg" class="card-img-top" alt="IMAGE-CARD" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-3">
+          <div class="card" style="width: 20rem">
+            <img src="/image/HOME PAGE1.jpg" class="card-img-top" alt="IMAGE-CARD" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- js-link -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
-      integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"
     ></script>
+    <!-- js-link -->
   </body>
 </html>
