--- a/index.html
+++ b/index.html
@@ -13,57 +13,44 @@
     />
   </head>
   <body>
-    <div class="container">
-      <div class="row py-4">
-        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-3">
-          <div class="card" style="width: 20rem">
-            <img src="/image/HOME PAGE1.jpg" class="card-img-top" alt="IMAGE-CARD" />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+    <div class="container py-5">
+      <div class="row g-2">
+        <div class="col-md-4">
+          <div class="card-section border shadow">
+            <img src="./image/iamge23.jpg" alt="" class="img-fluid" />
+            <div class="card-body p-3">
+              <div class="card-title">card-title</div>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum
+                voluptatem reiciendis facere, enim ab asperiores.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn button">Shop Now</a>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-3">
-          <div class="card" style="width: 20rem">
-            <img src="/image/HOME PAGE1.jpg" class="card-img-top" alt="IMAGE-CARD" />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+        <div class="col-md-4">
+          <div class="card-section border shadow">
+            <img src="./image/iamge23.jpg" alt="" class="img-fluid" />
+            <div class="card-body p-3">
+              <div class="card-title">card-title</div>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum
+                voluptatem reiciendis facere, enim ab asperiores.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn button">Shop Now</a>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-3">
-          <div class="card" style="width: 20rem">
-            <img src="/image/HOME PAGE1.jpg" class="card-img-top" alt="IMAGE-CARD" />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+        <div class="col-md-4">
+          <div class="card-section border shadow">
+            <img src="./image/iamge23.jpg" alt="" class="img-fluid" />
+            <div class="card-body p-3">
+              <div class="card-title">card-title</div>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum
+                voluptatem reiciendis facere, enim ab asperiores.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-3">
-          <div class="card" style="width: 20rem">
-            <img src="/image/HOME PAGE1.jpg" class="card-img-top" alt="IMAGE-CARD" />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn button">Shop Now</a>
             </div>
           </div>
         </div>
